# llmephant

./: .env.example  .gitignore  AGENTS.md  Dockerfile.api  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  tooling_config.yml.example
.github/workflows/: release.yml  version-bump.yml
src/llmephant/: app.py  cli.py
src/llmephant/core/: config.py  exceptions.py  logger.py  settings.py  tooling_config.py
src/llmephant/models/: chat_model.py  common_model.py  memory_model.py  tool_model.py
src/llmephant/repositories/: qdrant_repository.py
src/llmephant/routers/: chat_router.py  health_router.py  memory_router.py  models_router.py
src/llmephant/services/: chat_runtime.py  chat_service.py  embedding_service.py  memory_service.py  normalization.py  upstream_llm.py
src/llmephant/services/memory/: __init__.py  json_utils.py  prompts.py  service.py
src/llmephant/tools/: executor.py  memory_bridge.py  registry.py
src/llmephant/tools/providers/: base.py  mcp_provider.py
src/llmephant/utils/: get_user.py  text.py
tests/: test_integration_chat_runtime.py  test_unit_chat_runtime.py  test_unit_memory_service.py  test_unit_tool_registry.py
