[project]
name = "llmephant"
version = "0.2.0"
description = "Stateful memory for stateless LLMs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.1",
    "sentence-transformers>=5.1.2",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
api = "llmephant.app:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
